# MetaKnee

./: CMakeLists.txt  README.md
FemurCoords/: CMakeLists.txt  qSlicerFemurCoordsModule.cxx  qSlicerFemurCoordsModule.h  qSlicerFemurCoordsModuleWidget.cxx  qSlicerFemurCoordsModuleWidget.h
FemurCoords/Logic/: CMakeLists.txt  vtkSlicerFemurCoordsLogic.cxx  vtkSlicerFemurCoordsLogic.h
FemurCoords/Resources/: qSlicerFemurCoordsModule.qrc
FemurCoords/Resources/UI/: qSlicerFemurCoordsFooBarWidget.ui  qSlicerFemurCoordsModuleWidget.ui
FemurCoords/Widgets/: qSlicerFemurCoordsFooBarWidget.cxx  qSlicerFemurCoordsFooBarWidget.h
